feat: strengthen sage workflow, agent-first routing, and story generation pipeline

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,12 @@ TEMPORAL_NAMESPACE=ctxEco
 # =============================================================================
 # LLM Provider (choose one)
 # =============================================================================
+# Sage Story/Visual Models
+ANTHROPIC_MODEL=claude-opus-4-6
+GEMINI_MODEL=gemini-3.1-pro-preview
+GOOGLE_CLOUD_PROJECT=secai-radar
+GOOGLE_CLOUD_LOCATION=global
+
 # OpenAI Compatible (vLLM, Ollama, etc.)
 LLM_PROVIDER=openai
 LLM_API_BASE=http://localhost:11434/v1
