feat: enrich sage default workflow reliability and verification artifacts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,9 @@ services:
       - AZURE_AI_KEY=${AZURE_AI_KEY}
       - AZURE_AI_DEPLOYMENT=${AZURE_AI_DEPLOYMENT:-gpt-5.2-chat}
       - AZURE_AI_MODEL_ROUTER=${AZURE_AI_MODEL_ROUTER:-model-router}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - ANTHROPIC_MODEL=${ANTHROPIC_MODEL:-claude-opus-4-6}
       - GEMINI_MODEL=${GEMINI_MODEL:-gemini-3.1-pro-preview}
       - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT:-secai-radar}
