feat: persist opus and vertex artifacts to blob in durable story workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,10 @@ services:
       - GEMINI_MODEL=${GEMINI_MODEL:-gemini-3.1-pro-preview}
       - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT:-secai-radar}
       - GOOGLE_CLOUD_LOCATION=${GOOGLE_CLOUD_LOCATION:-global}
+      - AZURE_STORAGE_CONNECTION_STRING=${AZURE_STORAGE_CONNECTION_STRING}
+      - AZURE_STORAGE_STORIES_CONTAINER=${AZURE_STORAGE_STORIES_CONTAINER:-stories}
+      - AZURE_STORAGE_DIAGRAMS_CONTAINER=${AZURE_STORAGE_DIAGRAMS_CONTAINER:-diagrams}
+      - AZURE_STORAGE_IMAGES_CONTAINER=${AZURE_STORAGE_IMAGES_CONTAINER:-images}
       # Auth
       - AUTH_REQUIRED=${AUTH_REQUIRED:-false}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
@@ -123,6 +127,10 @@ services:
       - GEMINI_MODEL=${GEMINI_MODEL:-gemini-3.1-pro-preview}
       - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT:-secai-radar}
       - GOOGLE_CLOUD_LOCATION=${GOOGLE_CLOUD_LOCATION:-global}
+      - AZURE_STORAGE_CONNECTION_STRING=${AZURE_STORAGE_CONNECTION_STRING}
+      - AZURE_STORAGE_STORIES_CONTAINER=${AZURE_STORAGE_STORIES_CONTAINER:-stories}
+      - AZURE_STORAGE_DIAGRAMS_CONTAINER=${AZURE_STORAGE_DIAGRAMS_CONTAINER:-diagrams}
+      - AZURE_STORAGE_IMAGES_CONTAINER=${AZURE_STORAGE_IMAGES_CONTAINER:-images}
     depends_on:
       temporal:
         condition: service_started
